# ocelotl

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
ci/: check-offline.ps1
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/kernels/: Cargo.toml
crates/kernels/src/: attention.rs  cpu_avx2.rs  cubecl_backend.rs  lib.rs  mlp.rs  rmsnorm.rs  rope.rs  tensor.rs
crates/loader/: Cargo.toml
crates/loader/src/: gguf_inspect.rs  lib.rs  safetensors_inspect.rs  safetensors_values.rs
crates/models/: Cargo.toml
crates/models/src/: lib.rs  qwen2_5.rs  qwen2_5_model.rs  qwen2_5_tensors.rs
crates/models/src/gemma/: gemma4.rs  mod.rs
crates/models/src/qwen/: mod.rs  qwen2_5.rs  qwen2_5_model.rs  qwen2_5_tensors.rs  qwen3_5.rs
crates/models/src/qwen/qwen2_5/: decode.rs  mod.rs  model.rs  prefill.rs  tests.rs  weights.rs
crates/models/src/whisper/: audio.rs  config.rs  decode.rs  encode.rs  mod.rs  model.rs  primitives.rs  real.rs  state.rs  tensors.rs  tests.rs  weights.rs  wer.rs
crates/models/src/whisper/real/: encode.rs  mod.rs  model.rs  primitives.rs  state.rs  tests.rs  weights.rs
crates/models/tests/: qwen2_5_m3_parity_policy.rs  qwen2_5_tiny_synthetic_prefill.rs  whisper_cpp_benchmark.rs  whisper_local_artifact_parity.rs  whisper_real_adapter.rs  whisper_tiny_synthetic.rs  whisper_wer_corpus_runner.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: kv_cache.rs  lib.rs  qwen.rs  sampling.rs  scheduler.rs  whisper_streaming.rs
crates/runtime/src/qwen/: mod.rs
crates/runtime/src/whisper/: mod.rs  transcribe.rs
crates/runtime/tests/: m1_smoke.rs  qwen2_5_tiny_synthetic_decode.rs  whisper_real_transcription.rs  whisper_streaming.rs  whisper_transcription.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs
crates/tokenizer/: Cargo.toml
crates/tokenizer/src/: chat_template.rs  lib.rs  whisper.rs
crates/tokenizer/tests/: qwen2_5_basic_prompt.rs  qwen2_5_chat_template.rs  whisper_startup.rs  whisper_timestamps.rs
docs/: architecture.md  artifact-preparation.md  ci.md  crate-boundaries.md  model-target.md  overview.md  publishing.md  roadmap.md  start-here.md
docs/benchmarks/: whisper-cpp.md
docs/design/: errors.md  interfaces.md  kernels.md  kv-cache.md  loader.md  model-forward.md  model-metadata.md  quantization.md  runtime.md  sampling.md  scheduler.md  server-api.md  tokenizer.md
docs/libraries/: README.md  burn-lm.md  burn.md  cubecl.md  cubek.md  integration-map.md  safetensors.md  tokenizers.md  tokio.md
docs/milestones/: m0-skeleton.md  m1-cpu-reference.md  m2-loader-tokenizer.md  m3-single-model-forward.md  m4-gpu-kernel-path.md  m5-contiguous-kv-cache.md  m6-paged-kv-cache.md  m7-continuous-batching.md  m8-server-api.md  post-m3-model-family-expansion.md  post-m3-whisper-asr.md
docs/tasks/: README.md  m0-skeleton.md  m1-cpu-reference.md  m2-loader-tokenizer.md  m3-single-model-forward.md  m4-gpu-kernel-path.md  m5-contiguous-kv-cache.md  m6-paged-kv-cache.md  m7-continuous-batching.md  m8-server-api.md  post-m3-model-family-expansion.md  post-m3-whisper-asr.md
docs/validation/: README.md  benchmarks.md  correctness.md  fixtures.md  parity.md  principles.md  tdd.md  test-matrix.md  unsupported-configs.md
fixtures/: README.md
fixtures/benchmarks/: README.md  whisper_cpp_manifest.example.json  whisper_cpp_missing_binary_record.example.json  whisper_cpp_record.example.json
fixtures/chat/: qwen2_5_basic_chat.json
fixtures/logits/: README.md  m1_smoke_expected.json  qwen2_5_tiny_synthetic_prefill.json
fixtures/manifest/: post_m3_model_family_targets.json  qwen2_5_0_5b_instruct.json
fixtures/metadata/: gemma4_e4b_it_q4_k_m_gguf_metadata.json  invalid_missing_vocab_size.json  qwen2_5_tiny_synthetic.json  qwen3_5_35b_a3b_fp8_config.json  unsupported_dtype.json  unsupported_unknown_architecture.json
fixtures/tokenizer/: README.md  qwen2_5_basic_prompt.json  tiny_wordlevel.json
fixtures/wer/: whisper_wer_corpus.example.json
src/: chat.rs  lib.rs  main.rs
tools/: whisper-cpp-bench.ps1
