[workspace]
resolver = "2"
members = [
    ".",
    "crates/core",
    "crates/loader",
    "crates/tokenizer",
    "crates/kernels",
    "crates/models",
    "crates/runtime",
    "crates/server",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dieshen/ocelotl"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1"

ocelotl-core = { path = "crates/core", version = "0.0.1" }
ocelotl-loader = { path = "crates/loader", version = "0.0.1" }
ocelotl-tokenizer = { path = "crates/tokenizer", version = "0.0.1" }
ocelotl-kernels = { path = "crates/kernels", version = "0.0.1" }
ocelotl-models = { path = "crates/models", version = "0.0.1" }
ocelotl-runtime = { path = "crates/runtime", version = "0.0.1" }
ocelotl-server = { path = "crates/server", version = "0.0.1" }

[package]
name = "ocelotl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Rust-first LLM inference runtime."
readme = "README.md"
keywords = ["llm", "inference", "gpu", "runtime"]
categories = ["science", "api-bindings"]

[features]
default = []
cubecl-wgpu = ["ocelotl-kernels/cubecl-wgpu", "ocelotl-models/cubecl-wgpu"]

[dependencies]
ocelotl-core.workspace = true
ocelotl-kernels.workspace = true
ocelotl-loader.workspace = true
ocelotl-models.workspace = true
ocelotl-runtime.workspace = true
ocelotl-tokenizer.workspace = true
serde.workspace = true
serde_json.workspace = true

[[bin]]
name = "ocelotl"
path = "src/main.rs"

