[package]
name = "ocelotl-kernels"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Portable kernel dispatch boundary for Ocelotl."
readme = "../../README.md"

[dependencies]
ocelotl-core.workspace = true
