[package]
name = "ocelotl-kernels"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Portable kernel dispatch boundary for Ocelotl."
readme = "../../README.md"

[features]
default = []
cubecl = ["dep:cubecl"]
cubecl-wgpu = ["cubecl", "cubecl/wgpu"]

[dependencies]
cubecl = { version = "0.10.0", default-features = false, optional = true }
ocelotl-core.workspace = true
rayon = "1.10"
