[package]
name = "ocelotl-loader"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Model loading and artifact validation for Ocelotl."
readme = "../../README.md"

[dependencies]
ocelotl-core.workspace = true
safetensors = "0.7.0"
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
ocelotl-core = { workspace = true, features = ["test-fixtures"] }
