[package]
name = "ocelotl-models"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Model-family implementations for Ocelotl."
readme = "../../README.md"

[features]
default = []
cubecl-wgpu = ["ocelotl-kernels/cubecl-wgpu"]

[dependencies]
ocelotl-core.workspace = true
ocelotl-kernels.workspace = true
ocelotl-loader.workspace = true
rayon = "1.10"
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
ocelotl-tokenizer.workspace = true
