[package]
name = "ocelotl-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Request lifecycle and generation runtime for Ocelotl."
readme = "../../README.md"

[dependencies]
ocelotl-core.workspace = true
ocelotl-kernels.workspace = true
ocelotl-models.workspace = true
ocelotl-tokenizer.workspace = true
serde.workspace = true

[dev-dependencies]
ocelotl-loader.workspace = true
