[package]
name = "ocelotl-tokenizer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Tokenizer and chat-template boundary for Ocelotl."
readme = "../../README.md"

[dependencies]
ocelotl-core.workspace = true
# Hugging Face tokenizers — used as the backend for JsonTokenizer. Kept behind
# the Ocelotl `Tokenizer` trait; this crate is the only one in the workspace
# that imports `tokenizers`. `default-features = false` drops the optional
# `onig` C dependency and `progressbar`; `fancy-regex` (pure Rust) covers the
# regex needs of pre-tokenizers like `Whitespace`.
tokenizers = { version = "0.23", default-features = false, features = ["fancy-regex"] }

[dev-dependencies]
# Test-only: parse the small JSON fixtures under `fixtures/tokenizer/` (e.g.
# qwen2_5_basic_prompt.json) into typed records for exact-ID assertions. Not
# needed by production code; the `Tokenizer` trait does not deal in JSON.
serde.workspace = true
serde_json.workspace = true
